apps/minecraft-router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-router
  labels:
    app: minecraft-router
spec:
  selector:
    app: minecraft-router
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      protocol: TCP
